[gd_scene load_steps=20 format=2]

[ext_resource path="res://Objects/Enemies/Piranha/Piranha.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Piranha/piranha1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Piranha/piranha2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Piranha/piranha3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Piranha/piranha4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Piranha/piranha5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Piranha/piranha6.png" type="Texture" id=7]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Piranha/piranha7.png" type="Texture" id=8]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Piranha/piranha8.png" type="Texture" id=9]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Piranha/piranha9.png" type="Texture" id=10]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Piranha/piranha10.png" type="Texture" id=11]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Piranha/piranha11.png" type="Texture" id=12]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Piranha/piranha12.png" type="Texture" id=13]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Piranha/piranha13.png" type="Texture" id=14]
[ext_resource path="res://Assets/Graphics/Sprites/Enemies/Piranha/piranha14.png" type="Texture" id=15]
[ext_resource path="res://Assets/Audio/Enemies/piranhaloop.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/Audio/Mario/cappy.wav" type="AudioStream" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "default",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 16 )

[node name="Piranha" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -32 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -39 )
shape = SubResource( 2 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="PeriodTimer" type="Timer" parent="."]
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2( -5, -1 )
enabled = true
cast_to = Vector2( 0, -30 )

[node name="RayCast2D2" type="RayCast2D" parent="."]
visible = false
position = Vector2( 4, -1 )
enabled = true
cast_to = Vector2( 0, -30 )

[node name="SFXAttack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
volume_db = -9.088
max_distance = 500.0
bus = "SFX"

[node name="SFXIO" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
volume_db = 14.913
pitch_scale = 2.25
max_distance = 500.0
bus = "SFX"
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="PeriodTimer" to="." method="_on_PeriodTimer_timeout"]
